data/css/welcome.css
@font-face {
  font-family: 'Ubuntu';
  font-style: normal;
  font-weight: 300;
}
@font-face {
  font-family: 'Ubuntu';
  font-style: normal;
  font-weight: 400;
}
@font-face {
  font-family: 'Ubuntu';
  font-style: normal;
  font-weight: 700;
}

html {
  overflow-x: hidden;
  overflow-y: scroll;
}

html, body {
  margin: 0;
  padding: 0;
  height: 100%;
  /* Behave more like an application by
   * preventing text highlighting / dragging. */
  -webkit-user-select: none;
}

body, button {
  font-family: 'Ubuntu', sans-serif;
}

#wrapper {
  min-height: 100%;
  position: relative;
}

p.no-space {
  margin-bottom: 0 !important;
  padding-bottom: 0 !important;
}

.center {
  text-align: center;
  vertical-align: middle;
}

.backdrop-simple {
  background-color: #f4f4f4;
}

/************************
 * Header
*************************/

#header {
  padding: 8px 0;
  background-color: rgba(208, 208, 208, 0.25);
}

#header .logo {
  height: 64px;
}

#header h1 {
  margin-left: 16px;
  line-height: 64px;
  text-align: center;

  text-shadow: 2px 4px 8px rgba(0,0,0,0.4),
               0px -5px 35px rgba(255,255,255,0.8);

  font-size: 24px;
  font-weight: bold;
}

#header h2 {
  margin-left: 16px;
  line-height: 16px;
  text-align: center;

  text-shadow: 2px 4px 8px rgba(0,0,0,0.4),
               0px -5px 35px rgba(255,255,255,0.8);

  font-size: 16px;
  font-weight: normal;
}

#header .system-information {
  margin: 12px 8px 8px 8px;
}

#header .system-information p {
  margin: 0px;
  text-align: right;
}

#header .summary p {
  margin: 0 16px 8px 16px;
}

#header .summary {
  margin-top: 8px;
  margin-bottom: 8px;
}

/************************
 * Navigation
*************************/

#navigation {
  left: 0;
  top: 0;
  position: fixed;
  padding: 8px;
  width: 100%;
  height: 32px;
  padding: 8px;
  margin-bottom: 8px;
  z-index: 10;
  /* Ambience Theme Integration */
  background-color: #3C3B37;
	font-size: 24px;
	font-weight: normal;
  color: #DED9CB;
}

.navigation-button {
  width: 11px;
  height: 21px;
	color: #DED9CB;
  display: inline-block;
  padding: 4px 12px;
  margin-bottom: 0;
  font-size: 14px;
  line-height: 20px;
  vertical-align: middle;
  cursor: pointer;
  text-decoration: none;
}

.navigation-button:hover {
  color: #fff;
}

.navigation-button:active {
  background-color: #667E40;
  color: #fff;
}

#navigation-title {
  font-size: 18px;
  padding-left: 4px;
  vertical-align: middle;
  display: inline-table;
}

#navigation-sub-title {
  font-weight: normal;
  font-size: 18px;
  vertical-align: middle;
  display: inline-table;
  color: #959595;
}

#navigation-divider {
  top: 47px;
  left: 0;
  width: 100%;
  height: 11px;
  position: fixed;
}


/************************
 * Content
*************************/

#content {
  padding-top: 64px;
  padding-bottom: 64px;
}

.divider {
  padding-top: 16px;
  background: url("../img/welcome/header-shadow.png") center 0 no-repeat;
}

.btn-showcase {
  padding: 0 8px;
}

.btn-showcase h4 {
  text-align: center;
}

.btn-showcase .btn {
  line-height: 32px;
}

#content h2 {
  font-size: 24px;
}

#content h3 {
  font-size: 20px;
}

/* Center images within the div */
div .center-inside {
  position: relative;
  height: 100%;
  min-height: 50px;
  line-height: 50px;
  text-align: center;
}


/* Prevent accidental dragging on images and links */
img, a {
  -webkit-user-drag: none;
  user-drag: none;
}

/* Collapsible Sub-Sections */
.sub-collapse { cursor: pointer; }
.sub-collapse:hover { text-decoration: none; }

/* Any link (href / onclick) shows the pointing cursor */
a {
  cursor: pointer;
}

/************************
 * Footer
*************************/

#footer {
  background: url("../img/welcome/footer-bg.jpg");
  position: fixed;
  bottom: 0;
  height: 64px;
  width: 100%;
  padding: 0;
  z-index: 10;
}

#footer .footer-content {
  background: url("../img/welcome/footer-shadow.png") center 0 no-repeat;
  padding: 16px;
}

#footer .form {
  display: inline-block;
  position: absolute;
  right: 8px;
}

#footer .form a {
  color: #fff;
  text-decoration: none;
  margin-right: 8px;
}

#footer label {
  display: inline-block;
  padding-left: 0;
  margin-bottom: 0;
  vertical-align: middle;
  margin-right: 8px;
  color: #fff;
}

#social {
  margin: 6px 0px 0 0;
}

#social img, #social span {
  width: 24px; height: 24px;
  position: relative;
  top: 0px;
  margin-right: 4px;
  opacity: 0.7;

  -webkit-backface-visibility: hidden;
  transition: all 0.2s ease-in-out;

  -webkit-transition-property: all;
  -webkit-transition-duration: 0.2s;
  -webkit-transition-timing-function: ease-in-out;
  -webkit-transition-delay: initial;
}

#social img:hover, #social span:hover {
  top: -4px;
  opacity: 1.0;
}

.social-large img {
  width: 48px !important;
  height: 48px !important;
  padding-bottom: 8px;
}


/* No margin for social icon in navbar */
.no-margin {
    margin-top: 0px;
    margin-bottom: 0px;
    margin-left: 0px;
    margin-right: 0px;
}

img.centered {
    display: block;
    margin-left: auto;
    margin-right: auto;
}

img.left {
    margin-right: 10px;
    float: left;
}

img.right {
    margin-right: 10px;
    float: right;
}

hr.soften {
  height: 1px;
  background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(0,0,0,.8), rgba(0,0,0,0));
  border: 0;
}

hr.soften-light {
  height: 1px;
  background-image: -webkit-linear-gradient(left, rgba(0,0,0,0), rgba(150,150,150,.4), rgba(0,0,0,0));
  border: 0;
}

.fa-va {
  vertical-align: middle;
}

/************************
** Global
*************************/

/** Fade elements on Main Menu **/
.fade { opacity: 0 }
.fade-1s { -webkit-animation: fadeIn 1000ms forwards 10ms;   animation: fadeIn 1000ms forwards 10ms; }   /** Header **/
.fade-2s { -webkit-animation: fadeIn 1000ms forwards 400ms;  animation: fadeIn 1000ms forwards 400ms; }  /** Subheadings **/
/* ... */

